--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,9 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <link href="lib/datepicker-for-ionic/dist/style.css" rel="stylesheet"> 
+
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -22,6 +25,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/index.js"></script>
+    <!-- path to ionic/angularjs js -->
+    <script src="lib/datepicker-for-ionic/dist/templates.min.js"></script>
+    <script src="lib/datepicker-for-ionic/dist/ionic-datepicker.min.js"></script>
   </head>
 
   <body ng-app="starter">
