--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body ng-app="starter">
-    <ion-nav-bar class="bar-energized nav-title-slide-ios7">
+    <ion-nav-bar class="bar-dark nav-title-slide-ios7">
         <ion-nav-back-button class="button-clear">
           <i class="ion-arrow-left-c"></i> Back
         </ion-nav-back-button>
