--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,10 @@
     <!-- path to ionic/angularjs js -->
     <script src="lib/datepicker-for-ionic/dist/templates.min.js"></script>
     <script src="lib/datepicker-for-ionic/dist/ionic-datepicker.min.js"></script>
+
+    <script src="https://supa-greenmelody.mybluemix.net/socket.io/socket.io.js"></script>
+    <!--script src="lib/angular-socket-io/socket.min.js"></script-->
+
   </head>
 
   <body ng-app="starter">
